--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,28 +1,57 @@
-html, body {
-              height: 100%;
-          }
+/** {
+  outline: 1px solid red;
+}
+*/
+body {
+    margin: 0px auto;
+    padding: 0;
+    width: 970px;
+    font-weight: 100;
+    /*font-family: 'Lato';*/
+}
 
-          body {
-              margin: 0;
-              padding: 0;
-              width: 100%;
-              display: table;
-              font-weight: 100;
-              font-family: 'Lato';
-          }
+.container {
+    text-align: center;
+    display: inline-block;
+    vertical-align: middle;
+    width: 970px;
+}
 
-          .container {
-              text-align: center;
-              display: table-cell;
-              vertical-align: middle;
-          }
+.content {
+    text-align: center;
+    display: inline-block;
+}
 
-          .content {
-              text-align: center;
-              display: inline-block;
-          }
 
-          .title {
-              font-size: 96px;
+.title {
+    font-size: 60px;
 
-          }
+}
+
+.player {
+  height: 480px;
+  width: 854px;
+
+}
+
+.videos {
+  height: 100px;
+  width: 100%;
+  display: inline-block;
+  background-color: gray;
+}
+
+.video {
+  display: inline-block;
+  padding-left: 5px;
+  padding-top: 5px;
+}
+
+#nav {
+text-align: right;
+}
+
+#nav li {
+display: inline;
+text-align: right;
+}
